--- a/src/index.html
+++ b/src/index.html
@@ -14,143 +14,23 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico?v1">
-  <title>Population zero</title>
+  <title>Layout index | Population zero</title>
 </head>
-
-<body class="bg">
-<header>
-
-  <div class="disclaimers">
-
-    <div class="disclaimer">
-      <div class="container">
-        <div class="row py-3 small align-items-center">
-          <div class="col">
-            <div class="h5 mb-1">Cookies</div>
-            <div>Our website uses Google Analytics to analyze our traffic.
-              <br/>
-              To learn how you can control Google's use of your data and how you can opt out
-              <a href="#" class="link link-double">click here</a>.
-            </div>
-          </div>
-          <div class="col-2 col-md-3 text-nowrap text-right text-muted">
-            <span class="d-none d-md-inline">Accept and close</span>
-            <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="disclaimer">
-      <div class="container">
-        <div class="row py-3 small align-items-center">
-          <div class="col">
-            <div class="h5 mb-1">Privacy Policy</div>
-            <div>Please read our <a href="#" class="link link-double">Privacy Policy</a> before accepting it.
-            </div>
-          </div>
-          <div class="col-2 col-md-3 text-nowrap text-right text-muted">
-            <span class="d-none d-md-inline">Accept and close</span>
-            <a href="#" class="close-big close-big-white ml-md-2">&nbsp;</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="container">
-    <nav class="navbar navbar-expand-md navbar-dark px-0">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu"
-              aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainMenu">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link ml-md-0" href="#">About game</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Forum</a>
-          </li>
-        </ul>
-        <div class="dropdown">
-          <a class="btn btn-dark dropdown-toggle pl-0 pl-md-2 pr-md-0 " href="#" role="button" id="dropdownMenuLink"
-             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Рус
-          </a>
-          <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="#">Eng</a>
-            <a class="dropdown-item" href="#">Fra</a>
-            <a class="dropdown-item" href="#">Ita</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </div>
-
-</header>
-
-<main class="d-flex align-items-center justify-content-center flex-column">
-  <div class="container text-center my-5">
-    <h1 class="text-uppercase block-narrow">Изменение<br/>логина</h1>
-    <div class="my-5">
-      Ваш Логин/Email успешно изменен
-    </div>
-    <div>
-      <a class="link link-double stroke-full text-uppercase" href="#">На главную</a>
+<body>
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
+      <h1>Pages:</h1>
+      <p><a href="404.html" target="_blank">404</a></p>
+      <p><a href="beta.html" target="_blank">beta</a></p>
+      <p><a href="cabinet.html" target="_blank">cabinet</a></p>
+      <p><a href="hello.html" target="_blank">hello</a></p>
+      <p><a href="login.html" target="_blank">login</a></p>
+      <p><a href="message.html" target="_blank">message</a></p>
+      <p><a href="modal.html" target="_blank">modal</a></p>
+      <p><a href="reg-finish.html" target="_blank">reg-finish</a></p>
     </div>
   </div>
-</main>
-
-
-<footer class=""> <!-- set class "dark" for black footer -->
-  <div class="container small py-3 py-lg-5">
-    <div class="row d-flex align-items-center justify-content-between">
-
-      <div class="col col-md-12 col-lg-3 order-lg-3 text-center text-lg-left mb-4 mb-lg-0">
-        <div class="mb-2 text-nowrap">More about population zero</div>
-        <div>
-          <a href="#" class="social-icons fb">&nbsp;</a>
-          <a href="#" class="social-icons vk">&nbsp;</a>
-          <a href="#" class="social-icons tw">&nbsp;</a>
-          <a href="#" class="social-icons yt">&nbsp;</a>
-        </div>
-      </div>
-
-      <div class="col order-md-4 col-md-6 col-lg-4 mb-4 mb-md-0">
-        <div class="row no-gutters d-flex flex-nowrap align-items-center mx-auto ml-md-auto"
-             style="max-width: 300px">
-          <div class="col text-center text-lg-left">
-            <p class="text-nowrap">
-              <a href="#" class="link link-triple stroke-full">Privacy & Cookie Policy (Your Privacy Rights)</a>
-            </p>
-            <div class="text-nowrap">&copy; 2018 Enplex. All rights reserved.</div>
-          </div>
-          <div class="col">
-            <div class="ml-2 ml-lg-3 float-right img16plus" title="16+">&nbsp;</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col order-md-1 col-md-6 col-lg-4 px-0 text-nowrap">
-        <div class="row d-flex flex-nowrap">
-          <div class="col border-right border-dark">
-            <div class="footer-logo enplex" title="Enplex games">&nbsp;</div>
-          </div>
-          <div class="col ">
-            <div class="footer-logo pz" title="Population zero">&nbsp;</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col col-lg-1 d-none d-lg-block order-lg-2">&nbsp;</div>
-
-    </div>
-  </div>
-</footer>
+</div>
 </body>
 </html>
