--- a/src/beta.html
+++ b/src/beta.html
@@ -110,6 +110,9 @@
             <label class="small font-weight-bold" for="game-name-2">Название игры</label>
             <input type="text" class="form-control" id="game-name-2" name="game-name-2" placeholder="В дурака"
                    maxlength="50" required>
+            <div class="invalid-feedback">
+              Ну напиши же тут что-нибудь!
+            </div>
           </div>
           <div class="form-group col-sm-4">
             <label class="small font-weight-bold" for="game-time-2">Время в игре</label>
@@ -146,6 +149,9 @@
             Почему я должен быть выбран в качестве участника бета-теста?</label>
           <textarea class="form-control" name="whyme" id="whyme" rows="3" required
                     placeholder="Например, потому что у меня глаза красивые :) Хоть и красные..."></textarea>
+          <div class="invalid-feedback">
+            И тут тоже
+          </div>
         </div>
 
         <div class="form-check mt-4 custom-checkbox">
