--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,14 @@
   <div class="row">
     <div class="col">
       <h1>Pages:</h1>
-      <p><a href="404.html" target="_blank">404</a></p>
-      <p><a href="beta.html" target="_blank">beta</a></p>
-      <p><a href="cabinet.html" target="_blank">cabinet</a></p>
-      <p><a href="hello.html" target="_blank">hello</a></p>
-      <p><a href="login.html" target="_blank">login</a></p>
-      <p><a href="message.html" target="_blank">message</a></p>
-      <p><a href="modal.html" target="_blank">modal</a></p>
-      <p><a href="reg-finish.html" target="_blank">reg-finish</a></p>
+      <p><a href="404.html" target="_blank">Ошибка 404</a></p>
+      <p><a href="beta.html" target="_blank">Запись на бета-тестирование</a></p>
+      <p><a href="cabinet.html" target="_blank">Личный кабинет</a></p>
+      <p><a href="hello.html" target="_blank">Hello</a></p>
+      <p><a href="login.html" target="_blank">Форма логина</a></p>
+      <p><a href="message.html" target="_blank">Сообщение</a></p>
+      <p><a href="modal.html" target="_blank">Пример модального окна</a></p>
+      <p><a href="reg-finish.html" target="_blank">Завершите регистрацию</a></p>
     </div>
   </div>
 </div>
