--- a/src/beta.html
+++ b/src/beta.html
@@ -122,7 +122,7 @@
               <option value="2">3 месяца</option>
               <option value="3">5 лет</option>
               <option value="4" selected>всю жизнь</option>
-              <option value="5">столько не живут</option>
+              <option value="5">очень очень длинная опция которая не влезает</option>
             </select>
           </div>
           <div class="form-group col-sm-4">
