Styles and markup fixes for different browsers support

--- a/src/cabinet.html
+++ b/src/cabinet.html
@@ -224,7 +224,7 @@
         </div>
       </div>
       <div class="col-md mt-5 mt-md-0 order-1 order-md-3 cabinet-footer-action">
-        <div class="ml-auto py-3 text-left download-client">
+        <div class="mx-auto mr-md-0 ml-md-auto py-3 text-left download-client">
           <div class="h5 mb-0 text-uppercase font-weight-bold">
             <a href="#">Скачать клиент</a>
           </div>
@@ -242,7 +242,7 @@
   <div class="container small py-3 py-lg-5">
     <div class="row d-flex align-items-center justify-content-between">
 
-      <div class="col col-md-12 col-lg-3 order-lg-3 text-center text-lg-left mb-4 mb-lg-0">
+      <div class="col-md-12 col-lg-3 order-lg-3 text-center text-lg-left mb-4 mb-lg-0">
         <div class="mb-2 text-nowrap">More about population zero</div>
         <div>
           <a href="#" class="social-icons fb">&nbsp;</a>
@@ -252,7 +252,7 @@
         </div>
       </div>
 
-      <div class="col order-md-4 col-md-6 col-lg-4 mb-4 mb-md-0">
+      <div class="order-md-4 col-md-6 col-lg-4 mb-4 mb-md-0">
         <div class="row no-gutters d-flex flex-nowrap align-items-center mx-auto ml-md-auto"
              style="max-width: 300px">
           <div class="col text-center text-lg-left">
@@ -267,7 +267,7 @@
         </div>
       </div>
 
-      <div class="col order-md-1 col-md-6 col-lg-4 px-0 text-nowrap">
+      <div class="order-md-1 col-md-6 col-lg-4 px-0 text-nowrap">
         <div class="row d-flex flex-nowrap">
           <div class="col border-right border-dark">
             <div class="footer-logo enplex" title="Enplex games">&nbsp;</div>
@@ -278,7 +278,7 @@
         </div>
       </div>
 
-      <div class="col col-lg-1 d-none d-lg-block order-lg-2">&nbsp;</div>
+      <div class="col-lg-1 d-none d-lg-block order-lg-2">&nbsp;</div>
 
     </div>
   </div>
