--- a/src/hello.html
+++ b/src/hello.html
@@ -74,7 +74,7 @@
   <div class="container small py-3 py-lg-5">
     <div class="row d-flex align-items-center justify-content-between">
 
-      <div class="col col-md-12 col-lg-3 order-lg-3 text-center text-lg-left mb-4 mb-lg-0">
+      <div class="col-md-12 col-lg-3 order-lg-3 text-center text-lg-left mb-4 mb-lg-0">
         <div class="mb-2 text-nowrap">More about population zero</div>
         <div>
           <a href="#" class="social-icons fb">&nbsp;</a>
@@ -84,7 +84,7 @@
         </div>
       </div>
 
-      <div class="col order-md-4 col-md-6 col-lg-4 mb-4 mb-md-0">
+      <div class="order-md-4 col-md-6 col-lg-4 mb-4 mb-md-0">
         <div class="row no-gutters d-flex flex-nowrap align-items-center mx-auto ml-md-auto"
              style="max-width: 300px">
           <div class="col text-center text-lg-left">
@@ -99,7 +99,7 @@
         </div>
       </div>
 
-      <div class="col order-md-1 col-md-6 col-lg-4 px-0 text-nowrap">
+      <div class="order-md-1 col-md-6 col-lg-4 px-0 text-nowrap">
         <div class="row d-flex flex-nowrap">
           <div class="col border-right border-dark">
             <div class="footer-logo enplex" title="Enplex games">&nbsp;</div>
@@ -110,7 +110,7 @@
         </div>
       </div>
 
-      <div class="col col-lg-1 d-none d-lg-block order-lg-2">&nbsp;</div>
+      <div class="col-lg-1 d-none d-lg-block order-lg-2">&nbsp;</div>
 
     </div>
   </div>
